# exist_shared_task

./: LICENSE  README.md  pyproject.toml
exist_shared_task/: datavis.ipynb  efficient_net.ipynb
